--- a/dentko/faq/faq.html
+++ b/dentko/faq/faq.html
@@ -80,7 +80,7 @@
             <ul class="uk-navbar-nav uk-flex-between uk-flex-middle">
                 <li><a href="/dentko/about.html">о компании</a></li>
                 <li>
-                    <a href="/dentko/service.html">услуги</a>
+                    <a href="/dentko/service.html" class="nav__dropdown-link">услуги</a>
                     <div class="uk-navbar-dropdown">
                         <ul class="uk-nav uk-navbar-dropdown-nav">
                             <li><a href="/dentko/service.html"><img src="/dentko/img/inline-arrow-w.svg">Лечение пульпита</a></li>
@@ -91,6 +91,7 @@
                             <li><a href="/dentko/service.html"><img src="/dentko/img/inline-arrow-w.svg">Профилактика</a></li>
                             <li><a href="/dentko/service.html"><img src="/dentko/img/inline-arrow-w.svg">Парадонтология</a></li>
                             <li><a href="/dentko/service.html"><img src="/dentko/img/inline-arrow-w.svg">Косметология</a></li>
+                            <li><a href="/dentko/service.html"><img src="/dentko/img/inline-arrow-w.svg">Диагностика</a></li>
                         </ul>
                     </div>
                 </li>
