--- a/dentko/index.html
+++ b/dentko/index.html
@@ -325,7 +325,7 @@
                 </div>
             </div>
         </section>
-        <section class="benefits">
+        <section class="benefits no-overflow">
             <div class="uk-container">
                 <div class="uk-flex uk-child-width-1-2@s uk-flex-between benefits__wrap">
                     <div class="benefit">
