All fixes done!!

--- a/dentko/reviews/reviews.html
+++ b/dentko/reviews/reviews.html
@@ -77,30 +77,125 @@
     <nav class="nav" uk-navbar>
         <div class="uk-navbar-center">
             <ul class="uk-navbar-nav uk-flex-between uk-flex-middle">
-                <li><a href="./about.html">о компании</a></li>
+                <li><a href="/dentko/about.html">о компании</a></li>
                 <li>
-                    <a href="./service.html" class="nav__dropdown-link">услуги</a>
+                    <a href="/dentko/service.html" class="nav__dropdown-link">услуги</a>
                     <div class="uk-navbar-dropdown">
                         <ul class="uk-nav uk-navbar-dropdown-nav">
-                            <li><a href="./service.html"><img src="./img/inline-arrow-w.svg">Лечение пульпита</a></li>
-                            <li><a href="./service.html"><img src="./img/inline-arrow-w.svg">Протезирование</a></li>
-                            <li><a href="./service.html"><img src="./img/inline-arrow-w.svg">Хирургия</a></li>
-                            <li><a href="./service.html"><img src="./img/inline-arrow-w.svg">Ортодонтия</a></li>
-                            <li><a href="./service.html"><img src="./img/inline-arrow-w.svg">Отбеливание</a></li>
-                            <li><a href="./service.html"><img src="./img/inline-arrow-w.svg">Профилактика</a></li>
-                            <li><a href="./service.html"><img src="./img/inline-arrow-w.svg">Парадонтология</a></li>
-                            <li><a href="./service.html"><img src="./img/inline-arrow-w.svg">Косметология</a></li>
-                            <li><a href="./service.html"><img src="./img/inline-arrow-w.svg">Диагностика</a></li>
+                            <li>
+                                <a href="/dentko/service.html"><img src="/dentko/img/inline-arrow-w.svg">Лечение</a>
+                                <ul class="nav__inner">
+                                    <li><a href="#" class="service__link">Лечение пульпита</a></li>
+                                    <li><a href="#" class="service__link">Детская стоматология</a></li>
+                                    <li><a href="#" class="service__link">Лечение каналов</a></li>
+                                    <li><a href="#" class="service__link">Лечение корня зуба</a></li>
+                                    <li><a href="#" class="service__link">Лечение зубов под микроскопом</a></li>
+                                    <li><a href="#" class="service__link">Лечение зубов иностранным гражданам</a></li>
+                                    <li><a href="#" class="service__link">Центр эстетической стоматологии</a></li>
+                                </ul>
+                            </li>
+                            <li>
+                                <a href="/dentko/service.html"><img src="/dentko/img/inline-arrow-w.svg">Протезирование</a>
+                                <ul class="nav__inner">
+                                    <li><a href="#" class="service__link">Протезирование зубов</a></li>
+                                    <li><a href="#" class="service__link">Реставрация зубов</a></li>
+                                    <li><a href="#" class="service__link">Съемные зубные протезы</a></li>
+                                    <li><a href="#" class="service__link">Бюгельное протезирование</a></li>
+                                    <li><a href="#" class="service__link">Ремонт зубных протезов</a></li>
+                                    <li><a href="#" class="service__link">Люминиры</a></li>
+                                    <li><a href="#" class="service__link">Компониры</a></li>
+                                    <li><a href="#" class="service__link">Керамические виниры</a></li>
+                                    <li><a href="#" class="service__link">Безметалловая керамика</a></li>
+                                    <li><a href="#" class="service__link">Металлокерамические коронки</a></li>
+                                    <li><a href="#" class="service__link">Пластмассовый протез для зубов</a></li>
+                                    <li><a href="#" class="service__link">Нейлоновые протезы</a></li>
+                                    <li><a href="#" class="service__link">Зубной мост</a></li>
+                                </ul>
+                            </li>
+                            <li>
+                                <a href="/dentko/service.html"><img src="/dentko/img/inline-arrow-w.svg">Хирургия</a>
+                                <ul class="nav__inner">
+                                    <li><a href="#" class="service__link">Имплантация зубов (импланты)</a></li>
+                                    <li><a href="#" class="service__link">Наращивание костной ткани</a></li>
+                                    <li><a href="#" class="service__link">Стоматологическая хирургия</a></li>
+                                    <li><a href="#" class="service__link">Удаление зуба мудрости</a></li>
+                                    <li><a href="#" class="service__link">Удаление зубов</a></li>
+                                    <li><a href="#" class="service__link">Удаление зубов у детей</a></li>
+                                    <li><a href="#" class="service__link">Пластика уздечки языка</a></li>
+                                </ul>
+                            </li>
+                            <li>
+                                <a href="/dentko/service.html"><img src="/dentko/img/inline-arrow-w.svg">Ортодонтия</a>
+                                <ul class="nav__inner">
+                                    <li><a href="#" class="service__link">Установка брекет-систем</a></li>
+                                    <li><a href="#" class="service__link">Металлические брекеты</a></li>
+                                    <li><a href="#" class="service__link">Сапфировые брекеты</a></li>
+                                    <li><a href="#" class="service__link">Самолигирующие брекеты</a></li>
+                                    <li><a href="#" class="service__link">Керамические брекеты</a></li>
+                                    <li><a href="#" class="service__link">Брекеты Damon</a></li>
+                                    <li><a href="#" class="service__link">Услуги ортодонта в Минске</a></li>
+                                    <li><a href="#" class="service__link">Детский ортодонт</a></li>
+                                    <li><a href="#" class="service__link">Трейнеры для зубов</a></li>
+                                </ul>
+                            </li>
+                            <li>
+                                <a href="/dentko/service.html"><img src="/dentko/img/inline-arrow-w.svg">Отбеливание</a>
+                                <ul class="nav__inner">
+                                    <li><a href="#" class="service__link">Отбеливание зубов</a></li>
+                                    <li><a href="#" class="service__link">Офисное отбеливание зубов</a></li>
+                                    <li><a href="#" class="service__link">Отбеливание зубов капами</a></li>
+                                    <li><a href="#" class="service__link">Домашнее отбеливание зубов</a></li>
+                                </ul>
+                            </li>
+                            <li>
+                                <a href="/dentko/service.html"><img src="/dentko/img/inline-arrow-w.svg">Профилактика</a>
+                                <ul class="nav__inner">
+                                    <li><a href="#" class="service__link">Профессиональная чистка зубов и профилактика</a></li>
+                                    <li><a href="#" class="service__link">Герметизация фиссур</a></li>
+                                    <li><a href="#" class="service__link">Ультразвуковая чистка</a></li>
+                                    <li><a href="#" class="service__link">Профессиональная гигиена полости рта</a></li>
+                                </ul>
+                            </li>
+                            <li>
+                                <a href="/dentko/service.html"><img src="/dentko/img/inline-arrow-w.svg">Парадонтология</a>
+                                <ul class="nav__inner">
+                                    <li><a href="#" class="service__link">Пародонтология</a></li>
+                                    <li><a href="#" class="service__link">Лечение пародонтита</a></li>
+                                    <li><a href="#" class="service__link">Лечение гингивита</a></li>
+                                    <li><a href="#" class="service__link">Лечение пародонтоза</a></li>
+                                    <li><a href="#" class="service__link">Шинирование зубов в Минске</a></li>
+                                </ul>
+                            </li>
+                            <li>
+                                <a href="/dentko/service.html"><img src="/dentko/img/inline-arrow-w.svg">Косметология</a>
+                                <ul class="nav__inner">
+                                    <li><a href="#" class="service__link">Терапевтическая косметология</a></li>
+                                    <li><a href="#" class="service__link">Контурная пластика</a></li>
+                                    <li><a href="#" class="service__link">Пилинг</a></li>
+                                    <li><a href="#" class="service__link">Косметологическая клиника Дентко</a></li>
+                                    <li><a href="#" class="service__link">Массаж лица</a></li>
+                                    <li><a href="#" class="service__link">Чистка лица</a></li>
+                                    <li><a href="#" class="service__link">Микротоки для лица</a></li>
+                                    <li><a href="#" class="service__link">Ультразвуковая чистка лица</a></li>
+                                </ul>
+                            </li>
+                            <li>
+                                <a href="/dentko/service.html"><img src="/dentko/img/inline-arrow-w.svg">Диагностика</a>
+                                <ul class="nav__inner">
+                                    <li><a href="/dentko/service.html"><img src="/dentko/img/inline-arrow-w.svg">Панорамный снимок зубов</a></li>
+                                    <li><a href="/dentko/service.html"><img src="/dentko/img/inline-arrow-w.svg">3D компьютерная томография зубов</a></li>
+                                </ul>
+                            </li>
                         </ul>
                     </div>
                 </li>
-                <li><a href="./price.html">цены</a></li>
-                <li><a href="./payment.html">оплата и рассрочка</a></li>
-                <li><a href="./reviews/reviews.html">отзывы</a></li>
-                <li><a href="./team.html">специалисты</a></li>
-                <li><a href="./faq/faq.html">вопрос-ответ</a></li>
-                <li><a href="./contacts.html">контакты</a></li>
-                <li><a class="nav__order popup-request-open" href="#">Записаться на прием <img src="./img/inline-arrow.svg"></a></li>
+                <li><a href="/dentko/price.html">цены</a></li>
+                <li><a href="/dentko/payment.html">оплата и рассрочка</a></li>
+                <li><a href="/dentko/reviews/reviews.html">отзывы</a></li>
+                <li><a href="/dentko/team.html">специалисты</a></li>
+                <li><a href="/dentko/faq/faq.html">вопрос-ответ</a></li>
+                <li><a href="/dentko/contacts.html">контакты</a></li>
+                <li><a class="nav__order popup-request-open" href="#">Записаться на прием <img src="/dentko/img/inline-arrow.svg"></a></li>
             </ul>
         </div>
     </nav>
@@ -109,16 +204,16 @@
             <div class="uk-container">
                 <div class="uk-flex uk-flex-column uk-flex-middle">
                     <div class="uk-inline">
-                        <span class="header__dropdown"><a href="tel:+375291101212" class="footer__dd-link"><img src="./img/operator1.png">+375 (29) 110-12-12</a></span>
+                        <span class="header__dropdown"><a href="tel:+375291101212" class="footer__dd-link"><img src="/dentko/img/operator1.png">+375 (29) 110-12-12</a></span>
                         <div class="header__dropdown-container" uk-dropdown>
-                            <a href="tel:+375291101212" class="footer__dd-link"><img src="./img/operator1.png">+375 (29) 110-12-12</a>
-                            <a href="tel:+375336601313" class="footer__dd-link"><img src="./img/operator2.png">+375 (33) 660-13-13</a>
-                            <a href="tel:+375251101212" class="footer__dd-link"><img src="./img/operator3.png">+375 (25) 110-12-12</a>
-                            <a href="tel:+375172844511" class="footer__dd-link"><img src="./img/operator4.png">+375 (17) 284-45-11</a>
+                            <a href="tel:+375291101212" class="footer__dd-link"><img src="/dentko/img/operator1.png">+375 (29) 110-12-12</a>
+                            <a href="tel:+375336601313" class="footer__dd-link"><img src="/dentko/img/operator2.png">+375 (33) 660-13-13</a>
+                            <a href="tel:+375251101212" class="footer__dd-link"><img src="/dentko/img/operator3.png">+375 (25) 110-12-12</a>
+                            <a href="tel:+375172844511" class="footer__dd-link"><img src="/dentko/img/operator4.png">+375 (17) 284-45-11</a>
                         </div>
                     </div>
                     <div class="about__btn-wrap appointment__btn-wrap">
-                        <button class="uk-button uk-button-default button about__btn appointment__btn popup-request-open">Записаться на прием <img src="./img/inline-arrow-w.svg"></button>
+                        <button class="uk-button uk-button-default button about__btn appointment__btn popup-request-open">Записаться на прием <img src="/dentko/img/inline-arrow-w.svg"></button>
                     </div>
                 </div>
             </div>
@@ -630,7 +725,7 @@
                     <span class="uk-text uk-text-meta">© 1997 - 2020. Медицинский центр <br>"Дентко".</span>
                 </div>
                 <div class="uk-flex uk-flex-middle uk-flex-column footer__bottom-col">
-                    <span class="uk-text uk-text-meta">Рейтинг Медицинского центра "Дентко" - <img src="/dentko/img/rating.png"> 4,9 балла (10 голосов)</span>
+                    <span class="uk-text uk-text-meta">Рейтинг Медицинского центра "Дентко" - <img src="/dentko/img/rating.png"><a href="/dentko/reviews/reviews.html" class="footer__2reviews"> 4,9 балла (10 голосов)</a></span>
                     <a href="#" class="green-link uk-link">Продвижение сайта - hata.by</a>
                 </div>
                 <div class="footer__bottom-col">
